--- a/src/style.css
+++ b/src/style.css
@@ -30,7 +30,8 @@ body {
   font-weight: 700;
 }
 
-.containerSubTi, .containerSubTiDoc {
+.containerSubTi,
+.containerSubTiDoc {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -54,7 +55,7 @@ body {
   height: 100vh;
 }
 
-.grid-demo{
+.grid-demo {
   position: relative;
   background-size: cover;
   background-position: center;
@@ -62,7 +63,7 @@ body {
   height: 150vh;
 }
 
-.grid-demo .ImgBanda img{
+.grid-demo .ImgBanda img {
   position: absolute;
   top: 0;
   left: 0;
@@ -72,7 +73,7 @@ body {
 }
 
 @media screen and (max-width: 550px) {
-  .grid-demo .ImgBanda img{
+  .grid-demo .ImgBanda img {
     height: 159vh;
     width: auto;
     left: -8vw;
@@ -89,9 +90,10 @@ body {
 .logotipo img {
   position: absolute;
   top: 2.5vw;
-  width: 360px;
+  width: 550px;
   height: auto;
 }
+
 
 .home-button {
   background-color: #BC955B;
@@ -120,6 +122,10 @@ body {
 }
 
 @media screen and (max-width: 550px) {
+  .logotipo img {
+    width: 360px;
+  }
+
   .logotipo img,
   .home-button {
     left: 50%;
@@ -310,14 +316,107 @@ body {
   width: 100vw;
   height: 25vh;
   border-radius: 50px 50px 0px 0px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.foouter .foouterLogo img {
+  width: 550px;
+  height: auto;
+}
+
+.fooutertxt {
+  width: auto;
+  color: #fff;
+}
+
+.foouter span {
+  display: block;
+}
+
+.fooutertxt h1,
+.fooutertxt h2,
+.fooutertxt p {
+  margin: 0;
+  padding: 0;
+}
+
+.fooutertxt h1 {
+  font-size: 18px;
+}
+
+.fooutertxt h2,
+.fooutertxt p {
+  font-size: 16px;
+  font-weight: 300;
+}
+
+.FoouterUbicacion {
+  display: flex;
+  align-items: center;
+}
+
+.FoouterUbicacion img {
+  width: 20px;
+  height: auto;
+  margin-right: 5px;
+}
+
+.foouterBar{
+  position: absolute;
+  width: 5px;
+  height: 100px;
+  margin-left: -10px;
+  background: linear-gradient(to left, #BC955B, #BC955B 50%, transparent 50%);
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5); /* Ajusta la opacidad y el tamaño de la sombra según sea necesario */
 }
 
 @media screen and (max-width: 550px) {
   .foouter {
-    height: 12vh;
+    height: 15vh;
     border-radius: 25px 25px 0px 0px;
+    display: flex;
+    flex-direction: column;
+
+    align-items: center;
+    justify-content: center;
+  }
+
+  .foouterBar{
+    display: none;
+  }
+
+  .fooutertxt {
+    display: flex;
+    align-items: center;
+  }
+
+  .foouterInfo {
+    display: flex;
+    flex-direction: column;
+    padding-left: 20px;
+  }
+
+  .foouter .foouterLogo img {
+    width: 350px;
+    height: auto;
+  }
+
+  .fooutertxt h1 {
+    font-size: 10px;
+  }
+
+  .fooutertxt h2,
+  .fooutertxt p {
+    font-size: 8px;
+  }
+
+  .FoouterUbicacion img {
+    width: 10px;
   }
 }
+
 /*  */
 /* Controls */
 /*  */
