--- a/src/style.css
+++ b/src/style.css
@@ -1131,7 +1131,8 @@ a {
 /*  */
 /* modal */
 /*  */
-.modal-overlay {
+
+/* .modal-overlay {
   position: fixed;
   top: 0;
   left: 0;
@@ -1141,7 +1142,19 @@ a {
   align-items: center;
   justify-content: center;
   z-index: 10000;
+} */
 
+.modal-overlay {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 80%;
+  height: 60%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 10000;
 }
 
 .modal-content {
@@ -1151,4 +1164,12 @@ a {
   max-width: 600px;
   width: 100%;
   text-align: center;
+  position: relative; /* Añadir posición relativa */
+}
+
+.close-button {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
 }
